--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
